--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       font-size:30px;
       text-align:center;
       font-family:"Garamond", serif;
+      background: linear-gradient(to left,
+                    #5573B5,
+                    #5DA8FE);
+      -webkit-background-clip: text;
+      color: transparent;
     }
   </style>
   <head>
