--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <style>
-    div.t1{
+    span.t1{
       padding-top:20px;
       padding-bottom:20px;
       font-weight:bold;
@@ -19,6 +19,6 @@
     
   </head>
   <body>
-    <div class="t1">welcome!</div>
+    <span class="t1">welcome!</span>
   </body>
 </html>
