--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       padding-bottom:20px;
       font-weight:bold;
       font-size:30px;
-      text-align:center;
+      display: table;
+      margin: 0 auto;
       font-family:"Garamond", serif;
       background: linear-gradient(to left,
                     #C7B390,
