--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <style>
     span.t1{
       padding-top:20px;
-      padding-bottom:20px;
+      padding-bottom:10px;
       font-weight:bold;
       font-size:30px;
       display: table;
@@ -15,11 +15,20 @@
       -webkit-background-clip: text;
       color: transparent;
     }
+    div.t1{
+      padding-top:10px;
+      padding-bottom:10px;
+      font-weight:bold;
+      font-size:30px;
+      text-align:center;
+      font-family:"Garamond", serif;
+    }
   </style>
   <head>
     
   </head>
   <body>
     <span class="t1">welcome!</span>
+    <div class="t1">below you'll find<br>things ive made</div>
   </body>
 </html>
