--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
   </head>
   <body>
     <span class="t1">welcome!</span>
-    <div class="t1">below you'll find<br>things ive made</div>
+    <div class="t1">below you'll find some<br>of the things ive made</div>
   </body>
 </html>
