--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
   <body>
     <span class="t1">welcome!</span>
     <div class="t1">below you'll find some<br>of the things ive made</div>
+    <div class="t1">i cant lie this shit is<br>a work in progress and not<br>looking the best as of now</div>
   </body>
 </html>
