--- a/index.html
+++ b/index.html
@@ -1,30 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <style>
-    span.t1{
-      padding-top:20px;
-      padding-bottom:10px;
-      font-weight:bold;
-      font-size:30px;
-      display: table;
-      margin: 0 auto;
-      font-family:"Garamond", serif;
-      background: linear-gradient(to left,
-                    #C7B390,
-                    #5DA8FE);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-    div.t1{
-      padding-bottom:10px;
-      font-weight:bold;
-      font-size:25px;
-      text-align:center;
-      font-family:"Garamond", serif;
-    }
-  </style>
   <head>
-    
+    <link rel=“stylesheet” type=“text/css” href=“styles.css”>
   </head>
   <body>
     <span class="t1">welcome!</span>
