--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel=“stylesheet” href=“/styles.css”>
+    <link rel="stylesheet" href="/icythefirst.github.io/styles.css">
   </head>
   <body>
     <span class="t1">welcome!</span>
