--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://github.com/icythefirst/icythefirst.github.io/blob/cf11633f85bd215dd1e3e5f8fa0fd832c0f6ba7a/styles.css>
+    <link rel="stylesheet" type="text/css" href="https://icythefirst.github.io/styles.css">
   </head>
   <body>
     <span class="t1">welcome!</span>
