--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="https://icythefirst.github.io/styles.css">
   </head>
   <body>
+    <div class="tsep gradient" data-content="WELCOME"></div>
     <span class="t1">welcome!</span>
     <div class="t1">below you'll find some<br>of the things ive made</div>
     <div class="t1">i cant lie this shit is<br>a work in progress and not<br>looking the best as of now</div>
