--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="https://icythefirst.github.io/styles.css">
   </head>
   <body>
-    <hr class="line"/> 
+    <hr class="line"> 
     <div class="box">Testing</div>
     <span class="t1">welcome!</span>
     <div class="t1">below you'll find some<br>of the things ive made</div>
