--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
+<!--  !-->
   <head>
     <link rel="stylesheet" type="text/css" href="https://icythefirst.github.io/styles.css">
   </head>
+<!--  !-->
+  <title>
+    <hr>
+    <center><h1>WELCOME TO MY WEBSITE!</h1></center>
+    <hr>
+  </title>
+  <!--  !-->
   <body>
-    <hr class="top"> 
+    <center><h2>~~~~~   ~~~~~   ~~~~~   ~~~~~   ~~~~~</h2></center>
+    <br>
+    <center><h2>this website is about me! including a blog containing my personal thoughts,</h2></center>
+    <br>
+    <center><h2>a portfolio of my art (which is mainly pixel art), and specifically an about me page!</h2></center>
+    <br>
+    <center><h2>i <i>hope</i> to add more in the future, but we'll just have to see..oh! and of course:</h2></center>
+    <br>
+    <center><h2>ways you can contact me personally. is using email too weird in the modern landscape</h2></center>
+    <br>
+    <center><h2>of the internet? yes. yes it is. you can <i>probably</i> just ask me for another way to contact..</h2></center>
+    <hr>
   </body>
+  <!--  !-->
 </html>
