--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <hr>
       <center><h1>WELCOME TO MY WEBSITE!</h1></center>
     <hr>
-      <center><h2>this website is about me, <i>icythefirst</i>! including a blog containing my personal thoughts,</h2></center>
-      <center><h2>a portfolio of my art (which is mainly pixel art), and, naturally an about me page!</h2></center>
-      <center><h2>as well as ways you can contact me personally, of course! 😸</h2></center>
-      <center><h2>is using email too weird in the modern landscapeof the internet?</h2></center>
+      <center><h2>this website is about me, <i>icythefirst</i>! including a blog containing </h2></center>
+      <center><h2>my personal thoughts, a portfolio of my art (which is mainly pixel art),</h2></center>
+      <center><h2>and, naturally an about me page! as well as ways you can contact me personally, of course! 😸</h2></center>
+      <center><h2>is using email too weird in the modern landscape of the internet?</h2></center>
       <center><h2>yes. yes it is. you can <i>probably</i> just ask me for another way to contact..</h2></center>
-    <hr>
+    <hr border-bottom: dashed 1px #000000;>
   </body>
   <!--  !-->
 </html>
