--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <center><h2>and, naturally, an about me page! as well as ways you can contact me personally, of course! 😸</h2></center>
       <center><h2>is using email too weird in the modern landscape of the internet?</h2></center>
       <center><h2>yes. yes it is. you can <i>probably</i> just ask me for another way to contact..</h2></center>
-    <hr style="border-top: dotted 1px;" >
+    <hr style="border-bottom:2px dashed; border-top:0px;" >
   </body>
   <!--  !-->
 </html>
