--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
   </title>
   <!--  !-->
   <body>
-    <hr>
-      <center><h1>WELCOME TO MY WEBSITE!</h1></center>
-    <hr>
+      <center><h1 style="background: #102c54; color: #eae6ca;">WELCOME TO MY WEBSITE!</h1></center>
       <center><h2>this website is about me, <i>icythefirst</i>! including a blog containing </h2></center>
       <center><h2>my personal thoughts, a portfolio of my art (which is mainly pixel art),</h2></center>
       <center><h2>and, naturally, an about me page! as well as ways you can contact me personally, of course! 😸</h2></center>
       <center><h2>is using email too weird in the modern landscape of the internet?</h2></center>
-      <center><h2>yes. yes it is. you can <i>probably</i> just ask me for another way to contact..</h2></center>
+      <center><h2>yes. yes it is. you can <i>probably</i> just ask me for another way to contact me..</h2></center>
     <hr style="border-bottom:2px dashed; border-top:0px;" >
   </body>
   <!--  !-->
