--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </title>
   <!--  !-->
   <body>
-      <center><h1 style="background: #6c4675; color: #ffffff;"><b>WELCOME TO MY WEBSITE!</b></h1></center>
+      <center><h1 style="background: #34733d; color: #ffffff;"><b>WELCOME TO MY WEBSITE!</b></h1></center>
       <h2>this website is about me, <i>icythefirst</i>! including a blog containing </h2>
       <h2>my personal thoughts, a portfolio of my art (which is mainly pixel art),</h2>
       <h2>and, naturally, an about me page! as well as ways you can contact me personally, of course! 😸</h2>
