--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
   </title>
   <!--  !-->
   <body>
+      <hr style="border-bottom:2px dashed; border-top:0px;" >
       <center><h1 style="background: #34733d; color: #ffffff;"><b>WELCOME TO MY WEBSITE!</b></h1></center>
       <h2>this website is about me, <i>icythefirst</i>! including a blog containing </h2>
       <h2>my personal thoughts, a portfolio of my art (which is mainly pixel art),</h2>
       <h2>and, naturally, an about me page! as well as ways you can contact me personally, of course! 😸</h2>
       <h2>is using email too weird in the modern landscape of the internet?</h2>
       <h2>yes. yes it is. you can <i>probably</i> just ask me for another way to contact me..</h2>
-    <hr style="border-bottom:2px dashed; border-top:0px;" >
+      <hr style="border-bottom:2px dashed; border-top:0px;" >
+    <!--  !-->
+      <center><h1 style="background: #34733d; color: #ffffff;"><b>OTHER PAGES!</b></h1></center>
+      <div class="sidebar" style="center;  padding-left: 25%;
+       padding-right: 25%;">
+          <h2>
+           <p style="float: left;" href="https://icythefirst.github.io/blog.html">click HERE to read my blog!</p> 
+           <p style="float: right;" href="https://icythefirst.github.io/portfolio.html">click HERE to see my portfolio</p>
+         </h2>
+      </div> 
+    <center><h2 href="https://icythefirst.github.io/about.html">about me!</h2></center>
   </body>
   <!--  !-->
 </html>
