--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
       <center><h1 style="background: #34733d; color: #ffffff;"><b>OTHER PAGES!</b></h1></center>
       <div class="sidebar" style="center;  padding-left: 25%;
        padding-right: 25%;">
-          <h2>
-           <p style="float: left;" href="https://icythefirst.github.io/blog.html">click HERE to read my blog!</p> 
-           <p style="float: right;" href="https://icythefirst.github.io/portfolio.html">click HERE to see my portfolio</p>
-         </h2>
+           <h2><p style="float: left;"><a href="https://icythefirst.github.io/portfolio.html">click HERE to read my blog!</a></p></h2>
+           <h2><p style="float: right;"><a href="https://icythefirst.github.io/portfolio.html">click HERE to see my portfolio</a></h2></p></h2>
       </div> 
-    <center><h2 href="https://icythefirst.github.io/about.html">about me!</h2></center>
+    <br>
+    <h2><center><p><a href="https://icythefirst.github.io/portfolio.html">about me!</a></p></center></h2>
   </body>
   <!--  !-->
 </html>
