--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
       <center><h1 style="background: #34733d; color: #ffffff;"><b>OTHER PAGES!</b></h1></center>
       <div class="sidebar" style="center;  padding-left: 25%;
        padding-right: 25%;">
-           <h2><p style="float: left;"><a href="https://icythefirst.github.io/portfolio.html">click HERE to read my blog!</a></p></h2>
+           <h2><p style="float: left;"><a href="https://icythefirst.github.io/blog.html">click HERE to read my blog!</a></p></h2>
            <h2><p style="float: right;"><a href="https://icythefirst.github.io/portfolio.html">click HERE to see my portfolio</a></h2></p></h2>
       </div> 
     <br>
-    <h2><center><p><a href="https://icythefirst.github.io/portfolio.html">about me!</a></p></center></h2>
+    <br>
+    <br>
+    <h2><center><p><a href="https://icythefirst.github.io/about.html">about me!</a></p></center></h2>
   </body>
   <!--  !-->
 </html>
