--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-      <h2>blog placeholder</h2>
+      <h2>blog page placeholder</h2>
+    <br>
+    <h2><p><a href="https://icythefirst.github.io/index.html">take me back</a></p></h2>
   </body>
 </html>
