--- a/about.html
+++ b/about.html
@@ -2,5 +2,7 @@
 <html>
   <body>
       <h2>about me page placeholder/h2>
+        <br>
+    <h2><p><a href="https://icythefirst.github.io/index.html">take me back</a></p></h2>
   </body>
 </html>
