--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,8 @@
 <html>
   <body>
       <h2>portfolio page placeholder</h2>
-    <br>
+      <br>
     <h2><p><a href="https://icythefirst.github.io/index.html">take me back</a></p></h2>
   </body>
 </html>
+<!-- this isnt working so im gonna try to comment to edit it and see if it approves i guess !-->
