--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
            <h2><center><p style="float: left;"><a href="https://icythefirst.github.io/about.html">click HERE to learn about me</a></p></center></h2>
            <h2><p style="float: right;"><a href="https://icythefirst.github.io/contact.html">click HERE to contact me directly</a></h2></p></h2>
       </div> 
+    <hr style="border-bottom:2px dashed; border-top:0px;" >
   </body>
   <!--  !-->
 </html>
