--- a/index.html
+++ b/index.html
@@ -20,17 +20,23 @@
       <hr style="border-bottom:2px dashed; border-top:0px;" >
     <!--  !-->
       <center><h1 style="background: #34733d; color: #ffffff;"><b>OTHER PAGES!</b></h1></center>
-      <div class="sidebar" style="center;  padding-left: 25%;
-       padding-right: 25%;">
+      <div class="sidebar" style="center;  padding-left: 25%; padding-right: 25%;">
            <h2><p style="float: left;"><a href="https://icythefirst.github.io/blog.html">click HERE to read my blog</a></p></h2>
            <h2><p style="float: right;"><a href="https://icythefirst.github.io/portfolio.html">click HERE to see my portfolio</a></h2></p></h2>
       </div> 
     <br>
-  <div class="sidebar" style="center;  padding-left: 25%;
-       padding-right: 25%;">
+  <div class="sidebar" style="center;  padding-left: 25%; padding-right: 25%;">
            <h2><center><p style="float: left;"><a href="https://icythefirst.github.io/about.html">click HERE to learn about me</a></p></center></h2>
            <h2><p style="float: right;"><a href="https://icythefirst.github.io/contact.html">click HERE to contact me directly</a></h2></p></h2>
       </div> 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <hr style="border-bottom:2px dashed; border-top:0px;" >
   </body>
   <!--  !-->
