--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
       <hr style="border-bottom:2px dashed; border-top:0px;" >
       <center><h1 style="background: #34733d; color: #ffffff;"><b>WELCOME TO MY WEBSITE!</b></h1></center>
-      <h2>this website is about me, <i>icythefirst</i>! including a blog containing </h2>
-      <h2>my personal thoughts, a portfolio of my art (which is mainly pixel art),</h2>
-      <h2>and, naturally, an about me page! as well as ways you can contact me personally, of course! 😸</h2>
+      <h2>this website is about me, <i>icythefirst</i>! including a blog containing 
+      my personal thoughts, a portfolio of my art (which is mainly pixel art),
+      and, naturally, an about me page! as well as ways you can contact me personally, of course! >:3</h2>
       <h2>is using email too weird in the modern landscape of the internet?</h2>
-      <h2>yes. yes it is. you can <i>probably</i> just ask me for another way to contact me..</h2>
+      yes. yes it is. you can <i>probably</i> just ask me for another way to contact me..</h2>
       <hr style="border-bottom:2px dashed; border-top:0px;" >
     <!--  !-->
       <center><h1 style="background: #34733d; color: #ffffff;"><b>OTHER PAGES!</b></h1></center>
