--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 <!--  !-->
   <head>
-    <link rel="stylesheet" type="text/css" href="https://icythefirst.github.io/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://scienceonvhs.github.io/styles.css">
   </head>
 <!--  !-->
   <title>
-    icythefirst's website!!
+    cool website!!
   </title>
   <!--  !-->
   <body>
       <hr style="border-bottom:2px dashed; border-top:0px;" >
       <center><h1 style="background: #34733d; color: #ffffff;"><b>WELCOME TO MY WEBSITE!</b></h1></center>
-      <h2>this website is about me, <i>icythefirst</i>! including a blog containing 
-      my personal thoughts, a portfolio of my art (which is mainly pixel art),
+      <h2>this website is about me, <i>scienceonvhs</i>..or just science..or just vhs..! not sure.
+        ANYWAYS this site includes a blog for 
+      my personal thoughts, a portfolio for my art (which is mainly pixel art),
       and, naturally, an about me page! as well as ways you can contact me personally, of course! >:3</h2>
       <h2>is using email too weird in the modern landscape of the internet?</h2>
       yes. yes it is. you can <i>probably</i> just ask me for another way to contact me..</h2>
@@ -22,18 +23,18 @@
       <center><h1 style="background: #34733d; color: #ffffff;"><b>OTHER PAGES!</b></h1></center>
     <ul style="text-align: center;">
     <li style="display:inline-block;">
-        <div style="white-space: pre-wrap;"><a href="https://icythefirst.github.io/blog.html" style="text-decoration:none;"><h2><u>click HERE to read my blog</u>    </h2></a></div>
+        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/blog.html" style="text-decoration:none;"><h2><u>click HERE to read my blog</u>    </h2></a></div>
     </li>
     <li style="display:inline-block;">
-        <div style="white-space: pre-wrap;"><a href="https://icythefirst.github.io/portfolio.html" style="text-decoration:none;"><h2>    <u>click HERE to see my portfolio</u></h2></a></div>
+        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/portfolio.html" style="text-decoration:none;"><h2>    <u>click HERE to see my portfolio</u></h2></a></div>
     </li>
 </ul>
 <ul style="text-align: center;">
     <li style="display:inline-block;">
-        <div style="white-space: pre-wrap;"><a href="https://icythefirst.github.io/about.html" style="text-decoration:none;"><h2>   <u>click HERE to learn about me</u>    </h2></a></div>
+        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/about.html" style="text-decoration:none;"><h2>   <u>click HERE to learn about me</u>    </h2></a></div>
     </li>
     <li style="display:inline-block;">
-       <div style="white-space: pre-wrap;"><a href="https://icythefirst.github.io/contact.html" style="text-decoration:none;"><h2>    <u>click HERE to contact me directly</u></h2></a></div>
+       <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/contact.html" style="text-decoration:none;"><h2>    <u>click HERE to contact me directly</u></h2></a></div>
     </li>
 </ul>
     <hr style="border-bottom:2px dashed; border-top:0px;" >
