--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       my personal thoughts, a portfolio for my art (which is mainly pixel art),
       and, naturally, an about me page! as well as ways you can contact me personally, of course! >:3</h2>
       <h2>is using email too weird in the modern landscape of the internet?</h2>
-      yes. yes it is. you can <i>probably</i> just ask me for another way to contact me..</h2>
+      <b>yes. yes it is. you can <i>probably</i> just ask me for another way to contact me..</b>
       <hr style="border-bottom:2px dashed; border-top:0px;" >
     <!--  !-->
       <center><h1 style="background: #34733d; color: #ffffff;"><b>OTHER PAGES!</b></h1></center>
