--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
       <center><h1 style="background: #34733d; color: #ffffff;"><b>OTHER PAGES!</b></h1></center>
     <ul style="text-align: center;">
     <li style="display:inline-block;">
-        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/blog.html" style="text-decoration:none;"><h2><u>click HERE to read my blog</u>    </h2></a></div>
+        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/blog.html" style="text-decoration:none;"><h2><u>read my blog</u>    </h2></a></div>
     </li>
     <li style="display:inline-block;">
-        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/portfolio.html" style="text-decoration:none;"><h2>    <u>click HERE to see my portfolio</u></h2></a></div>
+        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/portfolio.html" style="text-decoration:none;"><h2>    <u>see my portfolio</u></h2></a></div>
     </li>
 </ul>
 <ul style="text-align: center;">
     <li style="display:inline-block;">
-        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/about.html" style="text-decoration:none;"><h2>   <u>click HERE to learn about me</u>    </h2></a></div>
+        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/about.html" style="text-decoration:none;"><h2>   <u>learn about me</u>    </h2></a></div>
     </li>
     <li style="display:inline-block;">
-       <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/contact.html" style="text-decoration:none;"><h2>    <u>click HERE to contact me directly</u></h2></a></div>
+       <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/contact.html" style="text-decoration:none;"><h2>    <u>contact me directly</u></h2></a></div>
     </li>
 </ul>
     <hr style="border-bottom:2px dashed; border-top:0px;" >
