--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,79 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Times New Roman;
+  padding: 20px;
+  background: #FCF7E3;
+  color: #3B3C36;
+}
+
+.header {
+
+  font-size: 40px;
+  text-align: center;
+  background: #FFFEFA;
+}
+
+.card {
+   background-color: #FFFEFA;
+   padding: 20px;
+   margin-top: 20px;
+}
+
+.img {
+  width: 100%;
+  padding: 20px;
+  height: 100px;
+}
+  
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.footer {
+  text-align: center;
+  font-size: 10px;
+  margin-top: 20px;
+  color: #000000;
+}
+
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {   
+    width: 100%;
+    padding: 0;
+  }
+}
+</style>
+  </head>
   <body>
-      <h2>blog page placeholder</h2>
-    <br>
-    <h2><p><a href="https://scienceonvhs.github.io/index.html">take me back</a></p></h2>
+      
+<div class="header">
+  <b style="font-family:'Times New Roman'; font-size:40px;">Blog Name</b><br>
+  <t style="font-family:'Times New Roman'; font-size:25px;">welcome to my blog! testtesttest</t>
+</div>
+    
+    <div class="card">
+      <h2>it's done!</h2>
+      <h5>Post #1, Sep 24, 2024</h5>
+      <p>FINALLY i got the blog stuff set up.</p>
+      <p>this process took a while, though of course 90% of the time spent being procrastination -_-<br> but i <i>finally</i> got myself to just look at some 
+        <a href="https://www.w3schools.com/howto/howto_css_blog_layout.asp">w3schools</a> code and edit it and paste it into here.. it's going to be a lot easier to make blog posts now though, and
+      while im at it i'll probably start working on the <i>other</i> three unfinished pages, which in theory will be a lot easier. we'll see. i would add a picture to this but i cannot for the life of
+      me find a relevant one, so..hopefully in future blog posts. also gotta make the site even look consistent in the first place...ughhhhhh. peace</p>
+    </div>
+  </div>
+  
+<div class="footer">
+  <h2><p><a href="https://scienceonvhs.github.io/index.html">take me back</a></p></h2>
+</div>
   </body>
 </html>
