--- a/blog.html
+++ b/blog.html
@@ -57,8 +57,8 @@ body {
   <body>
       
 <div class="header">
-  <b style="font-family:'Times New Roman'; font-size:40px;">Blog Name</b><br>
-  <t style="font-family:'Times New Roman'; font-size:25px;">welcome to my blog! testtesttest</t>
+  <b style="font-family:'Times New Roman'; font-size:40px;">scienceonvhs' blog page</b><br>
+  <t style="font-family:'Times New Roman'; font-size:25px;">welcome to my blog! below youll find numbered posts, from most recent to oldest.</t>
 </div>
     
     <div class="card">
@@ -73,7 +73,7 @@ body {
   </div>
   
 <div class="footer">
-  <h2><p><a href="https://scienceonvhs.github.io/index.html">take me back</a></p></h2>
+  <h2><p><a href="https://scienceonvhs.github.io/index.html">>> take me back >></take></take></a></p></h2>
 </div>
   </body>
 </html>
