--- a/index.html
+++ b/index.html
@@ -3,6 +3,59 @@
 <!--  !-->
   <head>
     <link rel="stylesheet" type="text/css" href="https://scienceonvhs.github.io/styles.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Times New Roman;
+  padding: 20px;
+  background: #FCF7E3;
+  color: #3B3C36;
+}
+
+.header {
+
+  font-size: 40px;
+  text-align: center;
+  background: #FFFEFA;
+}
+
+.card {
+   background-color: #FFFEFA;
+   padding: 20px;
+   margin-top: 20px;
+}
+
+.img {
+  width: 100%;
+  padding: 20px;
+  height: 100px;
+}
+  
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.footer {
+  text-align: center;
+  font-size: 10px;
+  margin-top: 20px;
+  color: #000000;
+}
+
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {   
+    width: 100%;
+    padding: 0;
+  }
+}
+</style>
   </head>
 <!--  !-->
   <title>
@@ -11,7 +64,7 @@
   <!--  !-->
   <body>
       <hr style="border-bottom:2px dashed; border-top:0px;" >
-      <center><h1 style="background: #34733d; color: #ffffff;"><b>WELCOME TO MY WEBSITE!</b></h1></center>
+      <center><h1 style="background: #34733d; "><b>WELCOME TO MY WEBSITE!</b></h1></center>
       <h2>this website is about me, <i>scienceonvhs</i>..or just science..or just vhs..! not sure.
         ANYWAYS this site includes a blog for 
       my personal thoughts, a portfolio for my art (which is mainly pixel art),
@@ -20,7 +73,7 @@
       <b>yes. yes it is. you can <i>probably</i> just ask me for another way to contact me..</b>
       <hr style="border-bottom:2px dashed; border-top:0px;" >
     <!--  !-->
-      <center><h1 style="background: #34733d; color: #ffffff;"><b>OTHER PAGES!</b></h1></center>
+      <center><h1 style="background: #34733d; "><b>OTHER PAGES!</b></h1></center>
     <ul style="text-align: center;">
     <li style="display:inline-block;">
         <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/blog.html" style="text-decoration:none;"><h2><u>read my blog</u>    </h2></a></div>
