--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
   <!--  !-->
   <body>
       <hr style="border-bottom:2px dashed; border-top:0px;" >
-      <center><h1 style="background: #34733d; "><b>WELCOME TO MY WEBSITE!</b></h1></center>
+      <center><h1 style="background: #34733d; color: #FFFEFA;"><b>WELCOME TO MY WEBSITE!</b></h1></center>
       <h2>this website is about me, <i>scienceonvhs</i>..or just science..or just vhs..! not sure.
         ANYWAYS this site includes a blog for 
       my personal thoughts, a portfolio for my art (which is mainly pixel art),
@@ -73,7 +73,7 @@ body {
       <b>yes. yes it is. you can <i>probably</i> just ask me for another way to contact me..</b>
       <hr style="border-bottom:2px dashed; border-top:0px;" >
     <!--  !-->
-      <center><h1 style="background: #34733d; "><b>OTHER PAGES!</b></h1></center>
+      <center><h1 style="background: #34733d; color: #FFFEFA;"><b>OTHER PAGES!</b></h1></center>
     <ul style="text-align: center;">
     <li style="display:inline-block;">
         <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/blog.html" style="text-decoration:none;"><h2><u>read my blog</u>    </h2></a></div>
