--- a/blog.html
+++ b/blog.html
@@ -56,10 +56,8 @@ body {
   </head>
   <body>
       
-<div class="header">
-  <b style="font-family:'Times New Roman'; font-size:40px;">scienceonvhs' blog page</b><br>
-  <t style="font-family:'Times New Roman'; font-size:25px;">welcome to my blog! below youll find numbered posts, from most recent to oldest.</t>
-</div>
+  <b style="font-family:'Times New Roman'; font-size:40px background: #34733d; color: #FFFEFA;">scienceonvhs' blog page</b><br>
+  <t style="font-family:'Times New Roman'; font-size:25px; background: #34733d; color: #FFFEFA;">welcome to my blog! below youll find numbered posts, from most recent to oldest.</t>
     
     <div class="card">
       <h2>it's done!</h2>
