--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {
       <hr style="border-bottom:2px dashed; border-top:0px;" >
     <!--  !-->
       <center><h1 style="background: #34733d; color: #FFFEFA;"><b>OTHER PAGES!</b></h1></center>
-    <ul style="text-align: center;">
+    <div class="card"><ul style="text-align: center;">
     <li style="display:inline-block;">
         <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/blog.html" style="text-decoration:none;"><h2><u>read my blog</u>    </h2></a></div>
     </li>
@@ -90,6 +90,7 @@ body {
        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/contact.html" style="text-decoration:none;"><h2>    <u>contact me directly</u></h2></a></div>
     </li>
 </ul>
+    </div>
     <hr style="border-bottom:2px dashed; border-top:0px;" >
   </body>
   <!--  !-->
