--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@ body {
   </head>
   <body>
       
-  <t style="font-family:'Times New Roman'; font-size:25px; background: #34733d; color: #FFFEFA;"><b></b>welcome to my blog! below youll find numbered posts, from most recent to oldest.</b></t>
+  <t style="font-family:'Times New Roman'; font-size:25px; background: #34733d; color: #FFFEFA;"><b>welcome to my blog! below youll find numbered posts, from most recent to oldest.</b></t>
     
     <div class="card">
       <h2>it's done!</h2>
