--- a/blog.html
+++ b/blog.html
@@ -55,8 +55,8 @@ body {
 </style>
   </head>
   <body>
-      
-  <div style="font-family:'Times New Roman'; font-size:25px; background: #34733d; color: #FFFEFA;"><center><b>WELCOME TO MY BLOG! BELOW YOULL FIND NUMBERED POSTS, FROM MOST RECENT TO OLDEST.</b></center></div>
+
+<marquee behavior="scroll" direction="right"><div style="font-family:'Times New Roman'; font-size:25px; background: #34733d; color: #FFFEFA;"><center><b>WELCOME TO MY BLOG! BELOW YOULL FIND NUMBERED POSTS, FROM MOST RECENT TO OLDEST. ######## WELCOME TO MY BLOG! BELOW YOULL FIND NUMBERED POSTS, FROM MOST RECENT TO OLDEST. ######## </b></center></div></marquee>
     
     <div class="card">
       <h2>it's done!</h2>
