--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@ body {
   </head>
   <body>
 
-<marquee behavior="scroll" direction="right"><div style="font-family:'Times New Roman'; font-size:25px; background: #34733d; color: #FFFEFA;"><center><b>WELCOME TO MY BLOG! BELOW YOULL FIND NUMBERED POSTS, FROM MOST RECENT TO OLDEST. ######## WELCOME TO MY BLOG! BELOW YOULL FIND NUMBERED POSTS, FROM MOST RECENT TO OLDEST. ######## </b></center></div></marquee>
+<div style="font-family:'Times New Roman'; font-size:25px; background: #34733d; color: #FFFEFA;"><center><b><marquee behavior="scroll; scrollamount=5" direction="right">WELCOME TO MY BLOG! BELOW YOULL FIND NUMBERED POSTS, FROM MOST RECENT TO OLDEST. ######## WELCOME TO MY BLOG! BELOW YOULL FIND NUMBERED POSTS, FROM MOST RECENT TO OLDEST. ######## </marquee></b></center></div>
     
     <div class="card">
       <h2>it's done!</h2>
