--- a/blog.html
+++ b/blog.html
@@ -55,9 +55,9 @@ body {
 </style>
   </head>
   <body>
-
+<hr style="border-bottom:2px dashed; border-top:0px;" >
 <div style="font-family:'Times New Roman'; font-size:25px; background: #34733d; color: #FFFEFA;"><center><b>WELCOME TO MY BLOG! BELOW YOULL FIND NUMBERED POSTS, FROM MOST RECENT TO OLDEST.</b></center></div>
-    
+    <hr style="border-bottom:2px dashed; border-top:0px;" >
     <div class="card">
       <h2>it's done!</h2>
       <h5>Post #1, Sep 24, 2024</h5>
