--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@ body {
   <hr style="border-bottom:2px dashed; border-top:0px;" >
     
 <div class="footer">
-  <h2><p><a href="https://scienceonvhs.github.io/index.html">>> take me back >></take></take></a></p></h2>
+  <h2><p><a href="https://icythefirst.github.io/index.html">>> take me back >></take></take></a></p></h2>
 </div>
   </body>
 </html>
