--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,6 @@
   <body>
       <h2>contact information placeholder</h2>
         <br>
-    <h2><p><a href="https://scienceonvhs.github.io/index.html">take me back</a></p></h2>
+    <h2><p><a href="https://icythefirst.github.io/index.html">take me back</a></p></h2>
   </body>
 </html>
