--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <!--  !-->
   <head>
-    <link rel="stylesheet" type="text/css" href="https://scienceonvhs.github.io/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://icythefirst.github.io/styles.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -66,7 +66,7 @@ body {
       <hr style="border-bottom:2px dashed; border-top:0px;" >
       <center><h1 style="background: #34733d; color: #FFFEFA;"><b>WELCOME TO MY WEBSITE!</b></h1></center>
     
-      <div class="card"><h2>this website is about me, <i>scienceonvhs</i>..or just science..or just vhs..! not sure.
+      <div class="card"><h2>this website is about me, <i>icythefirst</i>..or just science..or just vhs..! not sure.
         ANYWAYS this site includes a blog for 
       my personal thoughts, a portfolio for my art (which is mainly pixel art),
       and, naturally, an about me page! as well as ways you can contact me personally, of course! >:3</h2>
@@ -76,18 +76,18 @@ body {
       <center><h1 style="background: #34733d; color: #FFFEFA;"><b>OTHER PAGES!</b></h1></center>
     <div class="card"><ul style="text-align: center;">
     <li style="display:inline-block;">
-        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/blog.html" style="text-decoration:none;"><h2><u>read my blog</u>    </h2></a></div>
+        <div style="white-space: pre-wrap;"><a href="https://icythefirst.github.io/blog.html" style="text-decoration:none;"><h2><u>read my blog</u>    </h2></a></div>
     </li>
     <li style="display:inline-block;">
-        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/portfolio.html" style="text-decoration:none;"><h2>    <u>portfolio</u></h2></a></div>
+        <div style="white-space: pre-wrap;"><a href="https://icythefirst.github.io/portfolio.html" style="text-decoration:none;"><h2>    <u>portfolio</u></h2></a></div>
     </li>
 </ul>
 <ul style="text-align: center;">
     <li style="display:inline-block;">
-        <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/about.html" style="text-decoration:none;"><h2>   <u>about me</u>    </h2></a></div>
+        <div style="white-space: pre-wrap;"><a href="https://icythefirst.github.io/about.html" style="text-decoration:none;"><h2>   <u>about me</u>    </h2></a></div>
     </li>
     <li style="display:inline-block;">
-       <div style="white-space: pre-wrap;"><a href="https://scienceonvhs.github.io/contact.html" style="text-decoration:none;"><h2>    <u>contact me directly</u></h2></a></div>
+       <div style="white-space: pre-wrap;"><a href="https://icythefirst.github.io/contact.html" style="text-decoration:none;"><h2>    <u>contact me directly</u></h2></a></div>
     </li>
 </ul>
     </div>
