--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,6 @@
   <body>
       <h2>portfolio page placeholder</h2>
       <br>
-    <h2><p><a href="https://scienceonvhs.github.io/index.html">take me back</a></p></h2>
+    <h2><p><a href="https://icythefirst.github.io/index.html">take me back</a></p></h2>
   </body>
 </html>
-<!-- this isnt working so im gonna try to comment to edit it and see if it approves i guess !-->
